fix: Make interface responsive
Scale images and fonts of texts and headings. Fix styling of event sections and swiperjs for mobile compatibility. Reduce extra padding-top of sponsors section and events section and display a different image for roadmap which is accordingly scaled.

--- a/components/homepage/aboutus.module.css
+++ b/components/homepage/aboutus.module.css
@@ -41,19 +41,23 @@
 
 @media(max-width: 576px) {
     .h1 {
-        font-size: 50px;
+        font-size: 28px;
     }
 
     .h3 {
-        font-size: 30px;
+        font-size: 20px;
     }
 
     .h5 {
-        font-size: 18px;
+        font-size: 14px;
     }
 
     .btn {
         font-size: 14px;
         padding: 5px 20px;
+    }
+
+    .img {
+        max-width: 70%;
     }
 }
