--- a/components/homepage/roadmap.module.css
+++ b/components/homepage/roadmap.module.css
@@ -51,16 +51,32 @@
 
 @media(max-width: 575px) {
     .h1 {
-        font-size: 30px;
+        font-size: 32px;
+        line-height: 38px;
     }
 
     .h3 {
         font-size: 20px;
     }
 
+    .roadmapText {
+        margin-top: -10px;
+    }
+
     .btn {
         font-size: 14px;
         padding: 5px 20px;
+    }
+
+    .moneyImg {
+        max-width: 10%;
+    }
+
+    .groupImg {
+        content: url('./../../assets/img/homepage/roadmap/group_mobile.png');
+        left: 50%;
+        top: 40%;
+        transform: translate(-50%, -50%);
     }
 }
 
